Start styling text

--- a/style.css
+++ b/style.css
@@ -39,6 +39,10 @@ body {
 
 .right {
     flex: 3;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .logo {
@@ -59,5 +63,17 @@ body {
 .logo img {
     width: 7rem;
     padding: 1rem;
+}
+
+.information {
+    padding: 2rem;
+}
+
+.info-text {
+    font-size: 1.15rem;
+}
+
+p + p {
+    margin-bottom: 2rem;
 }
 
