--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ body {
     flex: 3;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    /* align-items: center; */
     justify-content: center;
 }
 
@@ -77,3 +77,21 @@ p + p {
     margin-bottom: 2rem;
 }
 
+.form {
+    display: flex;
+    flex-flow: row wrap;
+    padding-left: 2rem;
+}
+
+.form-row {
+    padding: 0.5rem;
+    display: flex;
+    flex-flow: column wrap;
+    width: 40%;
+}
+
+.text {
+    width: 100%;
+    font-size: 1.2rem;
+    padding-bottom: 1rem;
+}
