--- a/style.css
+++ b/style.css
@@ -41,7 +41,6 @@ body {
     flex: 3;
     display: flex;
     flex-direction: column;
-    /* align-items: center; */
     justify-content: center;
 }
 
@@ -66,7 +65,7 @@ body {
 }
 
 .information {
-    padding: 2rem;
+    padding: 2rem 2rem 2rem 0;
 }
 
 .info-text {
@@ -85,7 +84,7 @@ p + p {
 }
 
 .form-row {
-    padding: 0.5rem;
+    padding: 0.5rem 0.5rem 0.5rem 0;
     display: flex;
     flex-flow: column wrap;
     width: 40%;
@@ -94,7 +93,11 @@ p + p {
 .text-right {
     width: 100%;
     font-size: 1.2rem;
-    padding-bottom: 1rem;
+    padding-bottom: 0.8rem;
+}
+
+.form-btn {
+    padding-top: 1rem;
 }
 
 .form-btn button {
@@ -126,7 +129,7 @@ p + p {
 .form-row input {
     border: 1px solid #666363;
     border-radius: 2px;
-    padding: 0.2rem;
+    padding: 0.3rem;
     color: #fff;
     background-color: transparent;
 }
@@ -139,4 +142,19 @@ p + p {
 .form-row input:invalid {
     border: 1px solid #ee3030f1;
     color: #D55C5F;
+}
+
+.login-text {
+    font-size: 0.7rem;
+    padding-top: 2rem;
+    font-weight: 500;
+    opacity: 0.8;
+}
+
+.login-text span {
+    color:#407FC7
+}
+
+.left-padd {
+    padding-left: 2rem;
 }
